--- a/src/output.css
+++ b/src/output.css
@@ -742,6 +742,10 @@ video {
   margin-bottom: -7.5vh;
 }
 
+.mb-\[-8vh\]{
+  margin-bottom: -8vh;
+}
+
 .mt-2{
   margin-top: 0.5rem;
 }
@@ -901,10 +905,6 @@ video {
   display: none;
 }
 
-.h-96{
-  height: 24rem;
-}
-
 .h-\[70vh\]{
   height: 70vh;
 }
@@ -935,6 +935,14 @@ video {
 
 .w-\[40vw\]{
   width: 40vw;
+}
+
+.w-\[44vw\]{
+  width: 44vw;
+}
+
+.w-\[45vw\]{
+  width: 45vw;
 }
 
 .w-\[8vh\]{
@@ -2006,8 +2014,20 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-clr{
+  background-image: url(./assets/bgg.png);
+}
+
 .bg-main{
   background-image: url(./assets/bg.jpg);
+}
+
+.bg-time{
+  background-image: url(./assets/kad.png);
+}
+
+.bg-wkt{
+  background-image: url(./assets/wktu.png);
 }
 
 .decoration-slice{
@@ -2028,6 +2048,10 @@ video {
 .box-decoration-clone{
   -webkit-box-decoration-break: clone;
           box-decoration-break: clone;
+}
+
+.bg-contain{
+  background-size: contain;
 }
 
 .bg-cover{
@@ -2198,9 +2222,19 @@ video {
   padding-bottom: 2vw;
 }
 
+.py-\[4vw\]{
+  padding-top: 4vw;
+  padding-bottom: 4vw;
+}
+
 .py-\[5vw\]{
   padding-top: 5vw;
   padding-bottom: 5vw;
+}
+
+.py-\[3vw\]{
+  padding-top: 3vw;
+  padding-bottom: 3vw;
 }
 
 .pt-\[1vh\]{
