--- a/src/output.css
+++ b/src/output.css
@@ -2182,6 +2182,11 @@ video {
   padding-right: 3vw;
 }
 
+.px-\[4vh\]{
+  padding-left: 4vh;
+  padding-right: 4vh;
+}
+
 .px-\[4vw\]{
   padding-left: 4vw;
   padding-right: 4vw;
@@ -2222,19 +2227,14 @@ video {
   padding-bottom: 2vw;
 }
 
-.py-\[4vw\]{
-  padding-top: 4vw;
-  padding-bottom: 4vw;
+.py-\[3vw\]{
+  padding-top: 3vw;
+  padding-bottom: 3vw;
 }
 
 .py-\[5vw\]{
   padding-top: 5vw;
   padding-bottom: 5vw;
-}
-
-.py-\[3vw\]{
-  padding-top: 3vw;
-  padding-bottom: 3vw;
 }
 
 .pt-\[1vh\]{
