--- a/src/output.css
+++ b/src/output.css
@@ -665,18 +665,6 @@ video {
   inset-inline-end: 0.25rem;
 }
 
-.left-2{
-  left: 0.5rem;
-}
-
-.right-2{
-  right: 0.5rem;
-}
-
-.top-1\/2{
-  top: 50%;
-}
-
 .isolate{
   isolation: isolate;
 }
@@ -929,6 +917,10 @@ video {
   width: 1.4vh;
 }
 
+.w-\[100vw\]{
+  width: 100vw;
+}
+
 .w-\[20vw\]{
   width: 20vw;
 }
@@ -1020,11 +1012,6 @@ video {
 
 .border-separate{
   border-collapse: separate;
-}
-
-.-translate-y-1\/2{
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .\!transform{
@@ -1847,6 +1834,10 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
 .rounded-b{
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -2000,11 +1991,6 @@ video {
   background-color: rgb(255 0 0 / var(--tw-bg-opacity, 1));
 }
 
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
-}
-
 .bg-transparent{
   background-color: transparent;
 }
@@ -2148,8 +2134,9 @@ video {
      object-fit: scale-down;
 }
 
-.p-2{
-  padding: 0.5rem;
+.object-center{
+  -o-object-position: center;
+     object-position: center;
 }
 
 .px-1{
@@ -2331,6 +2318,10 @@ video {
 
 .text-\[9vw\]{
   font-size: 9vw;
+}
+
+.text-\[2vw\]{
+  font-size: 2vw;
 }
 
 .font-bold{
@@ -2741,16 +2732,6 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-.transition-transform{
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.duration-500{
-  transition-duration: 500ms;
 }
 
 .ease-in{
