--- a/src/output.css
+++ b/src/output.css
@@ -734,10 +734,6 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-\[-1vh\]{
-  margin-top: -1vh;
-}
-
 .mt-\[-30vw\]{
   margin-top: -30vw;
 }
@@ -1322,10 +1318,6 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .flex-row{
   flex-direction: row;
 }
@@ -1508,6 +1500,10 @@ video {
 
 .justify-items-stretch{
   justify-items: stretch;
+}
+
+.gap-\[2vw\]{
+  gap: 2vw;
 }
 
 .gap-y-\[4vh\]{
@@ -2316,14 +2312,6 @@ video {
   font-size: 8vw;
 }
 
-.text-\[9vw\]{
-  font-size: 9vw;
-}
-
-.text-\[2vw\]{
-  font-size: 2vw;
-}
-
 .font-bold{
   font-weight: 700;
 }
@@ -2398,11 +2386,6 @@ video {
 
 .text-\[\#336699\]\/\[\.35\]{
   color: rgb(51 102 153 / .35);
-}
-
-.text-\[\#f8bfbf\]{
-  --tw-text-opacity: 1;
-  color: rgb(248 191 191 / var(--tw-text-opacity, 1));
 }
 
 .text-\[\#fd91be\]{
