--- a/src/output.css
+++ b/src/output.css
@@ -913,6 +913,11 @@ video {
   height: 100vh;
 }
 
+.h-fit{
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .w-\[1\.4vh\]{
   width: 1.4vh;
 }
@@ -2008,6 +2013,10 @@ video {
   background-image: url(./assets/bg.jpg);
 }
 
+.bg-oval{
+  background-image: url(./assets/oval.png);
+}
+
 .bg-time{
   background-image: url(./assets/kad.png);
 }
@@ -2071,6 +2080,10 @@ video {
 .bg-clip-text{
   -webkit-background-clip: text;
           background-clip: text;
+}
+
+.bg-center{
+  background-position: center;
 }
 
 .bg-repeat{
@@ -2222,6 +2235,21 @@ video {
 .py-\[5vw\]{
   padding-top: 5vw;
   padding-bottom: 5vw;
+}
+
+.py-\[3vh\]{
+  padding-top: 3vh;
+  padding-bottom: 3vh;
+}
+
+.px-\[5vw\]{
+  padding-left: 5vw;
+  padding-right: 5vw;
+}
+
+.px-\[8vw\]{
+  padding-left: 8vw;
+  padding-right: 8vw;
 }
 
 .pt-\[1vh\]{
